--- a/index.html
+++ b/index.html
@@ -2,202 +2,92 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway&display=swap"
-    rel="stylesheet">
-  <title>Lesson 4</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/media.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&display=swap" rel="stylesheet">
+    <title>Black sea</title>
 </head>
 
 <body>
-  <header>
-    <div class="header-navigation">
-      <div class="container">
-        <div class="header-navigation_block">
-          <img class="header-navigation_logo" src="img/navigation_logo.png" alt="navigation_logo">
-          <ul class="header-navigation_links">
-            <li><a href="#">Features</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">awesome</a></li>
-            <li><a href="#">Rewiews</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="header-registration">
-        <div class="header-registration_column">
-          <img class="header_logo " src="img/header_logo.png" alt="header_logo">
-          <h1 class="header-title">Modern axure template for beautiful prototypes</h1>
-          <div class="header-registration_line"></div>
-          <p class="header-registration_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-            euismod bibendum laoreet. Proin gravida dolor sit amet lacus
-            accumsan et viverra justo commodo.</p>
-          <a class="download_link" href="#">Download</a>
-        </div>
-        <div class="header-registration_form">
-          <form action="action_page.php" class="registration">
-            <h2 class="registration_head">Try Your <span class="color-text">FREE</span> Trial Today</h2>
-            <label for="name"></label>
-            <input class="registration_input name_label" type="text" placeholder="Name" name="name" required>
-            <label for="email"></label>
-            <input class="registration_input email_label" type="text" placeholder="Email" name="email" required>
-            <label for="psw"></label>
-            <input class="registration_input psw_label" type="password" placeholder="Password" name="psw" required>
-            <input class="registration_submit" type="submit" value="Get Started">
-          </form>
-        </div>
-      </div>
-    </div>
-  </header>
-  <div class="social-media">
-    <div class="container">
-      <div class="social-media_column">
-        <h3 class="column_title">Social Media</h3>
-        <p class="column-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Aenean euismod bibendum laoreet.</p>
-      </div>
-      <div class="social-media_links">
-        <div class="social-media_icons-links">
-          <a class="icon-link facebook" href="https://www.facebook.com/" target="_blank"></a>
-          <a class="icon-link twitter" href="https://www.twitter.com/" target="_blank"></a>
-          <a class="icon-link google" href="https://www.idontexistanymore.com/" target="_blank"></a>
-          <a class="icon-link pinterest" href="https://www.pinterest.com/" target="_blank"></a>
-          <a class="icon-link instagram" href="https://www.instagram.com/" target="_blank"></a>
-          <a class="icon-link stumbleupon" href="https://www.stumbleupon.com/" target="_blank"></a>
-          <a class="icon-link rss" href="https://rss.com/" target="_blank"></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <main class="tabs-page">
-    <div class="container">
-      <div class="tabs-page_buttons">
-        <button class="tab_button">Tab 1</button>
-        <button class="tab_button">Tab 2</button>
-        <button class="tab_button">Tab 3</button>
-      </div>
-      <div class="tabs-page_column">
-        <div class="column-title tabs-title">Tabs with soft transitioning effect.</div>
-        <div class="column-paragraph tabs-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-          euismod
-          bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-          justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
-          penatibus et magnis dis parturient montes.
-          <br><br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-          bibendum laoreet.</div>
-        <button class="column-button">Download</button>
-      </div>
-      <div class="tabs-page_picture"></div>
-    </div>
-  </main>
-  <main class="awesome-options">
-    <div class="container">
-      <div class="awesome-options_header">
-        <h2 class="header_title">Why this is awesome</h2>
-        <div class="section_line"></div>
-        <span class="section_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-      </div>
-      <section class="awesome-options_section">
-        <div class="awesome-options_elips-bulb"></div>
-        <h3 class="section_title">Thoughtful Design</h3>
-        <p class="section_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit. Aenean euismod bibendum laoreet. Proin gravida
-          dolor sit amet lacus accumsan et viverra.</p>
-      </section>
-      <section class="awesome-options_section">
-        <div class="awesome-options_elips-keyboard"></div>
-        <h3 class="section_title">Well Crafted</h3>
-        <p class="section_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit. Aenean euismod bibendum laoreet. Proin gravida
-          dolor sit amet lacus accumsan et viverra.</p>
-      </section>
-      <section class="awesome-options_section">
-        <div class="awesome-options_elips-volt"></div>
-        <h3 class="section_title">Easy to Customize</h3>
-        <p class="section_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit. Aenean euismod bibendum laoreet. Proin gravida
-          dolor sit amet lacus accumsan et viverra.</p>
-      </section>
-    </div>
-    <section class="pricing-section">
-      <div class="container">
-        <div class="pricing-section_header">
-          <h2 class="header_title">Pricing-options</h2>
-          <div class="section_line"></div>
-          <span class="section_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-        </div>
-      </div>
-    </section>
-    <section class="customers-section">
-      <div class="container">
-        <div class="pricing-section_header">
-          <h2 class="header_title">What our customers are saying</h2>
-          <div class="section_line"></div>
-          <span class="section_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-        </div>
-      </div>
-    </section>
-  </main>
-  <section class="city">
-    <div class="container">
-      <div class="city_content">
-        <h2 class="header_title white">Stylish axure design</h2>
-        <div class="section_line white-line"></div>
-        <span class="section_paragraph white">Use the sections you need, remove the ones you don't. Create gorgeous
-          prototypes
-          faster than ever!</span>
-      </div>
-      <a class="download_link" href="#">Download</a>
-    </div>
-  </section>
-  <section class="contact-form">
-    <div class="container">
-      <div class="contact-form_content">
-        <h2 class="header_title">Stylish axure design</h2>
-        <div class="section_line"></div>
-        <span class="section_paragraph">Use the sections you need, remove the ones you don't. Create gorgeous
-          prototypes
-          faster than ever!</span>
-      </div>
-      <div class="contact-registration_form">
-        <form action="action_page.php" class="registration-form">
-          <div class="registration_fields">
-          <label for="name"></label>
-          <input class="registration_input name_label" type="text" placeholder="Name" name="name" required>
-          <label for="email"></label>
-          <input class="registration_input email_label" type="text" placeholder="Email" name="email" required>
-          <label for="psw"></label>
-          <input class="registration_input subject_label" type="password" placeholder="Subject" name="psw" required>
-          <label for="text_area"></label>
-          <legend class="registration_legend">Message</legend>
+    <div class="wrap">
+        <header class="header">
+            <div class="container">
+                <h1 class="header__logo">Black Sea</h1>
+                <nav class="header__nav">
+                    <a class="header__link" href="#">Home</a>
+                    <a class="header__link" href="#">About me</a>
+                    <a class="header__link" href="#">Portfolio</a>
+                    <a class="header__link" href="#">Contact me</a>
+                </nav>
+                <div class="gamburger"></div>
+            </div>
+        </header> <!-- ./ header -->
 
-        </div>
-        <label for="message"></label>
-        <input class="registration_input message_label" type="text" name="message" required>
-        <br>
-          <button class="contact-button">Send Message</button>
-        </form>
-      </div>
+        <div class="promo">
+            <div class="container">
+                <h2 class="promo__title">We need the tonic of wildness</h2>
+                <button class="promo__btn">Read more</button>
+                <ul class="promo__list">
+                    <li class="promo__item"></li>
+                    <li class="promo__item"></li>
+                    <li class="promo__item"></li>
+                    <li class="promo__item"></li>
+                    <li class="promo__item"></li>
+                </ul>
+            </div>
+        </div> <!-- ./ promo -->
+
+        <main class="main">
+            <div class="container">
+                <h3 class="main__title">At the same time that we are earnest to explore
+                    & learn all things </h3>
+                <p class="main__text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it to a type specimen book.
+                </p>
+
+                <div class="main-list__icons">
+                    <div class="main-icon"></div>
+                    <div class="main-icon"></div>
+                    <div class="main-icon"></div>
+                </div>
+            </div>
+        </main> <!-- ./ main -->
+
+        <div class="testimonial">
+            <div class="testimonial__wrap">
+                <img class="testimonial__dhavan" src="../img/dhavan-photo.png" alt="ghavan">
+            </div>
+            <div class="container">
+                <blockquote class="testimonial__review">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it to
+                    a type specimen book. It has survived not only five centuries, but also the leap into electronic
+                    typesetting
+                </blockquote>
+            </div>
+        </div> <!-- ./ testimonial -->
+
+        <div class="contact">
+            <div class="container">
+                <form action="action_page.php" class="form">
+                    <input class="form__user-name" type="text" placeholder="Name">
+                    <input class="form__user-email" type="email" placeholder="Email address">
+                    <textarea class="form__user-message" cols="29" rows="8" placeholder=" Message"></textarea>
+                    <button class="form__submit" type="submit"></button>
+                </form>
+            </div>
+        </div> <!-- ./ contact -->
+
+        <footer class="footer">
+            <div class="container">
+                <span class="footer__copyright">Copyright &copy; 2012 Css Author.com</span>
+            </div>
+        </footer> <!-- ./ footer -->
+
     </div>
-  </section>
-  <footer class="footer_content">
-    <div class="container">
-      <div class="footer-content_links">
-        <a class="footer_icon-link footer-facebook" href="https://www.facebook.com/" target="_blank"></a>
-        <a class="footer_icon-link footer-twitter" href="https://www.twitter.com/" target="_blank"></a>
-        <a class="footer_icon-link footer-google" href="https://www.idontexistanymore.com/" target="_blank"></a>
-        <a class="footer_icon-link footer-pinterest" href="https://www.pinterest.com/" target="_blank"></a>
-        <a class="footer_icon-link footer-instagram" href="https://www.instagram.com/" target="_blank"></a>
-        <a class="footer_icon-link footer-stumbleupon" href="https://www.stumbleupon.com/" target="_blank"></a>
-        <a class="footer_icon-link footer-rss" href="https://rss.com/" target="_blank"></a>
-      </div>
-      <span class="footer-content_text">&#169; 2015 Axure Themes</span>
-    </div>
-  </footer>
 </body>
 
 </html>
